View Attendance and Exporting to excel sheet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,15 @@
     <color name="white">#FFFFFFFF</color>
     <color name="text_color">#0099FF</color>
 
-    <color name="gray">#CCCCCC</color>
+    <color name="gray">#A0A0A0</color>
+    <color name="greenText">#00AB27</color>
     <color name="backgroudCLr">#E4EAE4</color>
     <color name="headerBg">#005B98</color>
 
-
+    <color name="colorPresent">#00C609</color>
+    <color name="colorAbsent">#EB0000</color>
+    <color name="colorInvalid">#EEA700</color>
+    <color name="colorIncomplete">#000000</color>
     <!--colors for modern UI-->
     <color name="loginBkColor">#F0F0F0</color>
 
