--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -20,11 +20,10 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/greetmsg"
+                android:id="@+id/greetingMsg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:text="Good Morning"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -33,7 +32,7 @@
                 android:id="@+id/userName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/greetmsg"
+                android:layout_below="@+id/greetingMsg"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -41,7 +40,7 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_alignRight="@+id/greetmsg"
+                android:layout_alignRight="@+id/greetingMsg"
                 android:layout_alignParentRight="true"
                 android:src="@drawable/ic_login_hero" />
         </RelativeLayout>
@@ -62,6 +61,7 @@
             android:text="MES INSTITUTE OF MANAGEMENT AND\nCAREER COURSES(IMCC)"
             android:textAlignment="center"
             android:textColor="@color/black"
+            android:fontFamily="@font/lato_bold"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -100,6 +100,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="35dp"
             android:text="Batch"
+            android:textColor="@color/gray"
             android:textAlignment="center"
             android:textStyle="bold"></TextView>
 
@@ -109,6 +110,7 @@
             android:layout_marginLeft="112dp"
             android:layout_marginTop="35dp"
             android:text="Subject"
+            android:textColor="@color/gray"
             android:textAlignment="center"
             android:textStyle="bold"></TextView>
 
@@ -153,19 +155,21 @@
                 android:layout_height="50dp"
                 android:onClick="markAttendace"
                 android:layout_marginLeft="60dp"
-                android:background="@drawable/attendance" />
+                android:background="@drawable/classroom" />
 
             <Button
                 android:id="@+id/classes"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:onClick="viewAttendance"
                 android:layout_marginLeft="60dp"
-                android:background="@drawable/classroom" />
+                android:background="@drawable/attendance" />
 
             <Button
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="60dp"
+                android:visibility="invisible"
                 android:background="@drawable/student" />
         </LinearLayout>
 
@@ -188,8 +192,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="45dp"
-                android:text="Batches"
+                android:layout_marginLeft="22dp"
+                android:onClick="viewAttendance"
+                android:text="View Attendance"
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
@@ -198,6 +203,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="55dp"
                 android:text="Students"
+                android:visibility="invisible"
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
@@ -209,6 +215,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:onClick="signOut"
         android:text="SignOut" />
 
@@ -224,5 +231,22 @@
 
 
     </androidx.core.widget.NestedScrollView>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:menu="@menu/bottom_navigation_menu" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 </LinearLayout>
