--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/abril_fatface</item>
+        <item>@font/archivo_black</item>
         <item>@font/balsamiq_sans_italic</item>
+        <item>@font/berkshire_swash</item>
+        <item>@font/bigshot_one</item>
         <item>@font/emblema_one</item>
+        <item>@font/lato</item>
         <item>@font/lato_bold</item>
+        <item>@font/lato_thin</item>
+        <item>@font/lexend_bold</item>
+        <item>@font/lexend_semibold</item>
         <item>@font/yeon_sung</item>
     </array>
 </resources>
